W3.5 · leer, medido antes de decidir (medida-w3-leer.py): 23 tipos difíciles leídos por los tres SDK de verdad y cotejados campo a campo con pyarrow; 10 M de filas en cada lenguaje — pandas pierde enteros con nulos y decimales grandes, Node da los bigint como cadena, el mapeo JDBC de Java tiene cuatro tipos mal (ns, time, map, decimal), y materializar filas-objeto es 20–40× más lento que columnar (Python 13 M filas/s, Node 0,3, Java 0,6): la verdad es Arrow, el contrato de tipos hay que escribirlo, y el JSON de la consola lo obedece
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>